# group_3_plane_dashboard

./: CODE_EXPLAINED.md  NEXT_STEPS.md  README.md  analysis.py  app.py  db.py  pyproject.toml
.github/workflows/: tests.yml
data/: _generated.json  fuel.parquet
tests/: conftest.py  test_analysis.py  test_db.py
